fix: footer alignments

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -159,3 +159,26 @@ body {
     @apply transition-transform duration-300 ease-in-out;
   }
 }
+
+@media (prefers-reduced-motion: no-preference) {
+  #featured-slide {
+    animation: slide linear;
+    animation-timeline: scroll();
+  }
+
+  @keyframes slide {
+    to {
+      transform: translateX(-20%);
+    }
+  }
+
+  /* .featured-products {
+  background: linear-gradient(
+    90deg,
+    rgba(42, 123, 155, 1) 0%,
+    rgba(87, 199, 133, 1) 9%,
+    rgba(91, 200, 132, 1) 10%,
+    rgba(237, 221, 83, 1) 90%
+  );
+} */
+}
